@@ -6,7 +6,7 @@ Author: Kornelius Rohmeyer
 Maintainer: Kornelius Rohmeyer <rohmeyer@small-projects.de>
 Description: This package provides functions and a graphical user interface for graphical described sequentially rejective multiple test procedures.
 Depends: R (>= 2.8.0), graph, rJava (>= 0.7-0), methods
-Suggests: RUnit
+Suggests: RUnit, Deducer, mutoss
 SystemRequirements: Java (>= 5.0) 
 License: GPL (>= 2)
 LazyLoad: yes
